fix overflow comment component

--- a/src/components/Video/Video.module.scss
+++ b/src/components/Video/Video.module.scss
@@ -120,7 +120,7 @@
         background-color: white;
         width: 600px;
         max-width: 600px;
-        max-height: 80%;
+        overflow: hidden;
         .title_action {
             display: flex;
             align-items: center;
